2003-04-16  Loban A Rahman <loban@earthling.net>
	* stickynotes.glade, docs/C/stickynotes.xml: Changed "sticky across
	  workspaces" to the more standard "put on all workspaces".
	* stickynotes.glade, *.h, *.c: Changed gui-layout of sticky notes.
	  This fixes bugs #109718, #107447. Popup menu has been relocated.
	  There is still some work needed for button colors.
	* *.h, *.c: Fixed the bug #111010: Resizing works again.
	* stickynotes.glade, stickynotes.c: Fixed bug #111003, the resize
	  and close buttons are colored correctly now.

2003-04-15  Loban A Rahman <loban@earthling.net>
	* *.h, *.c: Fixed reopened bug #110112.
	* *.h, *.c: Used enums instead of magic numbers for applet default
	  click behaviour choices.

2003-04-08  Loban A Rahman <loban@earthling.net>

	* stickynotes_applet_callbacks.c: Fixed bug #110112, stickynotes now
	  compiles correctly using gcc 2.95.
	* *,h, *.c: Remembers "hide all notes" across sessions.
	* *.h, *.c: Pressing ENTER on an applet == Left clicking it.
	
2003-04-04  Loban A Rahman <loban@earthling.net>

	* *.h, *.c: Fixed bug #106154, sticky notes are now correctly
	  skipped from the pager and taskbar.
	* *.h, *.c: Some minor code cleanup.
	* *.h, *.c: Partially fixed bug #108124.

2003-04-02  Loban A Rahman <loban@earthling.net>

	* *.h, *.c: Code cleanup. Fixed some visibility issues.
	* stickynotes_applet.c: Fixed a crash while autosaving.

2003-04-01  Loban A Rahman <loban@earthling.net>

	* stickynotes.c, stickynotes_callbacks.h, stickynotes_callbacks.c:
	  Fixed bug #109287: Choosing "close window" from the window menu of a
	  sticky note triggers destroying the note, now.
	* stickynotes_callbacks.c, stickynotes_applet_callbacks.c:
	  Fixed bug #109391: Focus indication around applet is back.
	* stickynotes_applet_callbacks.c:
	  Fixed bug #109781: About dialog acts properly now.

2003-03-28  Loban A Rahman <loban@earthling.net>

	* GNOME_StickyNotesApplet.xml.in, Makefile.am: