@@ -982,9 +982,6 @@ Changes will be saved instantly.</property>
 
 	  <child>
 	    <widget class="GtkButton" id="resize_button">
-	      <property name="width_request">20</property>
-	      <property name="height_request">20</property>
-	      <property name="visible">True</property>
 	      <property name="tooltip" translatable="yes">Resize note</property>
 	      <property name="can_focus">True</property>
 	      <property name="relief">GTK_RELIEF_NONE</property>
@@ -1029,9 +1026,6 @@ Changes will be saved instantly.</property>
 
 	  <child>
 	    <widget class="GtkButton" id="close_button">
-	      <property name="width_request">20</property>
-	      <property name="height_request">20</property>
-	      <property name="visible">True</property>
 	      <property name="tooltip" translatable="yes">Delete note</property>
 	      <property name="can_focus">True</property>
 	      <property name="relief">GTK_RELIEF_NONE</property>
