@@ -1,4 +1,10 @@
+2003-04-22  Loban A Rahman <loban@earthling.net>
+
+	* stickynotes.glade, stickynotes_callbacks.c: Window management
+	  buttons are only visible when a note is in focus.
+
 2003-04-16  Loban A Rahman <loban@earthling.net>
+
 	* stickynotes.glade, docs/C/stickynotes.xml: Changed "sticky across
 	  workspaces" to the more standard "put on all workspaces".
 	* stickynotes.glade, *.h, *.c: Changed gui-layout of sticky notes.
@@ -9,6 +15,7 @@
 	  and close buttons are colored correctly now.
 
 2003-04-15  Loban A Rahman <loban@earthling.net>
+
 	* *.h, *.c: Fixed reopened bug #110112.
 	* *.h, *.c: Used enums instead of magic numbers for applet default
 	  click behaviour choices.
